Added copyright tags & cleanup text files

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
- GNOME Virtual Machine Manager
- =============================
+ Virtual Machine Manager
+ =======================
 
-GNOME Virtual Machine Manager is maintained by:
+Virtual Machine Manager is maintained by:
 
    Daniel Berrange <berrange@redhat.com>
 
