--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
- GNOME Virtual Machine Manager ChangeLog
- =======================================
+ Virtual Machine Manager ChangeLog
+ =================================
 
+Release 0.1.2
+-------------
+
+ * First public release
 
