--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
- GNOME Virtual Machine Manager News
- ==================================
+ Virtual Machine Manager News
+ ============================
 
 2006-03-29
 ----------
