--- a/README
+++ b/README
@@ -1,5 +1,5 @@
- GNOME Virtual Machine Manager
- ============================
+ Virtual Machine Manager
+ =======================
 
 This application provides a graphical tool for managing virtual machines
 via the libvirt library.
