--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
  Virtual Machine Manager ChangeLog
  =================================
 
+Release 0.1.3
+-------------
+
+ * Fixed DBus service activation & general brokenness
+ * Added a display of virtual CPU count in summary page
+ * Fixed alignment of status label in details page
+ * Make hardware config panel resizeable
+ * Switch detailed graph rendering to use sparkline code
+ * Switch to use filled sparkline graphs
+	
 Release 0.1.2
 -------------
 
