Filled out authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,18 @@
- Virtual Machine Manager
- =======================
+ Virtual Machine Manager Authors
+ ===============================
 
-Virtual Machine Manager is maintained by:
+Virtual Machine Manager code is developed by:
 
    Daniel Berrange <berrange@redhat.com>
+   Hugh O. Brock <hbrock@redhat.com>
+
+The user interaction / interface design and artwork is
+done by:
+
+   Máirín Duffy <duffy@redhat.com>
+
+Further patches have been submitted by:
+
+  <...send a patch & get your name here...>
+
 
