--- a/README
+++ b/README
@@ -32,6 +32,8 @@ please report any success to the mailing lists
  dbus-python >= 0.61
  gnome-keyring >= 0.4.9
  python-ctypes >= 0.9.9.6
+ libxml2-python >= 2.6.23
+ vte >= 0.12.2
 
 Contact
 -------
