Switched keyring code to use gnomekeyring module. Disable keyring support if not available

--- a/README
+++ b/README
@@ -31,7 +31,7 @@ please report any success to the mailing lists
  libvirt-python >= 0.1.1
  dbus-python >= 0.61
  gnome-keyring >= 0.4.9
- python-ctypes >= 0.9.9.6
+ gnome-python-desktop >= 2.15.4
  libxml2-python >= 2.6.23
  vte >= 0.12.2
 
